--- a/app/src/main/res/layout/fragment_search_news.xml
+++ b/app/src/main/res/layout/fragment_search_news.xml
@@ -9,27 +9,22 @@
         android:id="@+id/svQuery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:queryHint="@string/searchHint"
         android:iconifiedByDefault="false"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:queryHint="@string/search_view_hint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tvDatePick"
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chipDatePick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:textColor="?attr/colorOnSurface"
-        android:background="@drawable/rounded_corner_view"
-        android:drawableLeft="@drawable/ic_date"
-        android:drawablePadding="8dp"
-        android:layout_margin="8dp"
-        android:padding="6dp"
-        app:layout_constraintTop_toBottomOf="@id/svQuery"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.1"/>
+        app:chipIcon="@drawable/ic_date"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/svQuery" />
 
 
     <androidx.recyclerview.widget.RecyclerView
@@ -38,19 +33,19 @@
         android:layout_height="0dp"
         android:layout_margin="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvDatePick"
-        tools:listitem="@layout/list_item"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/chipDatePick"
+        tools:listitem="@layout/list_item" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:layout_constraintTop_toTopOf="@id/rvFoundNews"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/rvFoundNews"/>
+        app:layout_constraintBottom_toBottomOf="@id/rvFoundNews"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/rvFoundNews" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
