--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,7 +12,8 @@
         android:orientation="vertical">
 
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/fl"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <ImageView
@@ -21,14 +23,14 @@
                 android:scaleType="centerCrop"
                 tools:src="@drawable/ic_newspaper2" />
 
-            <TextView
+            <ImageView
                 android:id="@+id/btnBookmark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_margin="4dp"
-                android:background="@drawable/ic_bookmark" />
-
+                android:background="@color/white"
+                android:src="@drawable/ic_bookmark" />
         </FrameLayout>
 
         <TextView
