--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,4 +13,8 @@
         android:id="@+id/searchNewsFragment"
         android:name="com.example.newsportal.app.search.SearchNewsFragment"
         android:label="SearchNewsFragment" />
+    <fragment
+        android:id="@+id/bookmarksFragment"
+        android:name="com.example.newsportal.app.bookmarks.BookmarksFragment"
+        android:label="BookmarksFragment" />
 </navigation>
