--- a/app/src/main/res/drawable/ic_bookmark.xml
+++ b/app/src/main/res/drawable/ic_bookmark.xml
@@ -1,6 +1,22 @@
-<vector android:height="24dp" android:viewportHeight="480.002"
-    android:viewportWidth="480" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#bfb073" android:pathData="m392,472v-456c0,-4.418 -3.582,-8 -8,-8h-288c-4.418,0 -8,3.582 -8,8v456l152,-160zM392,472"/>
-    <path android:fillColor="#ffeb99" android:pathData="m240,265.535 l-120,126.32v-351.855h240v351.855zM240,265.535"/>
-    <path android:fillColor="#FF000000" android:pathData="m384,0h-288c-8.836,0 -16,7.164 -16,16v456c0,3.273 1.992,6.219 5.035,7.43 3.039,1.215 6.512,0.457 8.766,-1.918l146.199,-153.895 146.199,153.895c2.258,2.375 5.73,3.133 8.77,1.918 3.039,-1.211 5.031,-4.156 5.031,-7.43v-456c0,-8.836 -7.164,-16 -16,-16zM384,452 L245.801,306.488c-1.512,-1.59 -3.605,-2.492 -5.801,-2.492 -2.191,0 -4.289,0.902 -5.801,2.492l-138.199,145.512v-436h288zM384,452"/>
+<vector android:height="24dp" android:viewportHeight="512.007"
+    android:viewportWidth="512.007" android:width="24dp"
+    xmlns:aapt="http://schemas.android.com/aapt" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:pathData="m398.298,509.861 l-142.295,-85.371 -142.295,85.371c-4.629,2.783 -10.4,2.871 -15.088,0.19 -4.717,-2.666 -7.617,-7.646 -7.617,-13.052v-481.999c0,-8.291 6.709,-15 15,-15h300c8.291,0 15,6.709 15,15v482c0,5.405 -2.9,10.386 -7.617,13.052 -4.645,2.65 -10.417,2.606 -15.088,-0.191z">
+        <aapt:attr name="android:fillColor">
+            <gradient android:endX="256.003" android:endY="0"
+                android:startX="256.003" android:startY="512.007" android:type="linear">
+                <item android:color="#FFFD5900" android:offset="0"/>
+                <item android:color="#FFFFDE00" android:offset="1"/>
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path android:pathData="m301.941,373.089 l-45.938,-24.141 -45.938,24.141c-5.039,2.637 -11.162,2.241 -15.791,-1.143 -4.629,-3.354 -6.943,-9.038 -5.977,-14.663l8.789,-51.138 -37.148,-36.226c-4.102,-3.984 -5.566,-9.946 -3.809,-15.381 1.758,-5.42 6.475,-9.375 12.1,-10.195l51.357,-7.456 22.969,-46.523c5.039,-10.254 21.855,-10.254 26.895,0l22.969,46.523 51.357,7.456c5.625,0.82 10.342,4.775 12.1,10.195 1.758,5.435 0.293,11.396 -3.809,15.381l-37.148,36.226 8.789,51.138c0.967,5.625 -1.348,11.309 -5.977,14.663 -4.458,3.257 -10.574,3.89 -15.79,1.143z">
+        <aapt:attr name="android:fillColor">
+            <gradient android:endX="256.003" android:endY="182.674"
+                android:startX="256.003" android:startY="374.818" android:type="linear">
+                <item android:color="#FFFFE59A" android:offset="0"/>
+                <item android:color="#FFFFFFD5" android:offset="1"/>
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
