--- a/app/src/main/res/menu/news_card_menu.xml
+++ b/app/src/main/res/menu/news_card_menu.xml
@@ -8,6 +8,6 @@
     <item
         android:id="@+id/add_to_bookmark"
         android:enabled="true"
-        android:icon="@drawable/ic_bookmark_filled"
+        android:icon="@drawable/ic_bookmark"
         android:title="@string/add_to_bookmarks" />
 </menu>
