--- a/app/src/main/res/layout/popup_news_detail.xml
+++ b/app/src/main/res/layout/popup_news_detail.xml
@@ -24,35 +24,15 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:id="@+id/tvSource"
-        style="?attr/textAppearanceBody1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
-        app:layout_constraintEnd_toStartOf="@id/tvPublishedAt"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        tools:text="BBC Sports" />
-
-    <TextView
-        android:id="@+id/tvPublishedAt"
-        style="?attr/textAppearanceBody1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_medium"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
-        tools:text="2020-09-09" />
-
     <ImageView
         android:id="@+id/articleImage"
         android:layout_width="0dp"
-        android:layout_height="@dimen/news_card_image_height"
-        android:layout_marginTop="@dimen/margin_large"
+        android:layout_height="@dimen/news_details_image_height"
+        android:layout_marginTop="@dimen/margin_medium"
         android:background="@color/cardview_dark_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSource"
+        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         tools:ignore="ContentDescription"
         tools:src="@drawable/ic_newspaper2" />
 
@@ -67,6 +47,26 @@
         tools:text="Author: Cheryl Teh" />
 
     <TextView
+        android:id="@+id/tvSource"
+        style="?attr/textAppearanceBody2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/margin_medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
+        tools:text="BBC Sports" />
+
+    <TextView
+        android:id="@+id/tvPublishedAt"
+        style="?attr/textAppearanceBody2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_large"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
+        tools:text="2020-09-09" />
+
+    <TextView
         android:id="@+id/tvTitle"
         style="?attr/textAppearanceHeadline6"
         android:layout_width="0dp"
@@ -76,7 +76,7 @@
         android:layout_marginEnd="@dimen/margin_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvAuthor"
+        app:layout_constraintTop_toBottomOf="@id/tvPublishedAt"
         tools:text="Article header" />
 
     <ImageView
