--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="gray">#99000000</color>
+    <color name="grayPrimary">#424242</color>
+    <color name="grayLight">#6d6d6d</color>
+    <color name="grayDark">#1b1b1b</color>
 </resources>
