--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="padding_small">4dp</dimen>
 
     <dimen name="news_card_image_height">200dp</dimen>
+    <dimen name="news_details_image_height">250dp</dimen>
 </resources>
